Рандомизатор чисел вынесен за пределы цикла while

--- a/Programming.html
+++ b/Programming.html
@@ -87,6 +87,8 @@
 	var Player2 = prompt("Введите имя игрока №2: ");
 	var playerNumber = Player1;
 
+	var answer = parseInt(Math.random()*100);
+
 	while(true) {
 		var answer = parseInt(Math.random()*100);
 		var playerAnswer = prompt(playerNumber + " Угадайте число от 0 до 100 \nДля выхода нажмите q");
