Подготовил страницы для игр, добавил класс актив

--- a/siteprogramming/index.html
+++ b/siteprogramming/index.html
@@ -9,17 +9,17 @@
 	<div class="container">
 		<header>
 			<nav>
-				<a href="#">Главная</a>/
-				<a href="#">Загадки</a>/
-				<a href="#">Угадайка</a>/
-				<a href="#">Угадайка мультиплеер</a>
+				<a href="index.html" class="activ">Главная</a>/
+				<a href="riddles.html">Загадки</a>/
+				<a href="Guess.html">Угадайка</a>/
+				<a href="GuessMP.html">Угадайка мультиплеер</a>
 			</nav>
 		</header>
 		<main>
 			<section class="section_main">
 				<h1 class="title">Личный сайт студента GeekBrains</h1>
 				<figure>
-					<img src="img/ESdlHluKzqQ (2).jpg" alt="Me" width="510" height="625">
+					<img src="img/Me.jpg" alt="Me" width="510" height="625">
 					<figcaption>
 						<div class="description">
 							<p>Добрый день. Меня зовут Полякин Антон. 
